# rust-survey-json

./: Readme-Survey.md  Readme.md
data/: 1.json
rust-survey-json_bin/: Cargo.toml
rust-survey-json_bin/src/: rust-survey_main_bin.rs
rust-survey-json_lib/: Cargo.toml
rust-survey-json_lib/src/: lib.rs  models.rs
rust-survey-json_lib/src/core/: error.rs  factory.rs  mod.rs  sample.rs  string.rs
rust-survey-json_lib/test/: integration_test.rs
rust-survey-json_test/: Cargo.toml
rust-survey-json_test/test/: integration_indep_test.rs
