[package]
name = "rust-survey-json_lib"
version = "0.1.0"
authors = ["Arman <armanriyazi.github.io@gmail.com>"]
description = "A finder on json data for calculate the rate of users"
edition = "2021"
readme = "Readme-Survey.md"
license = "MPL-2.0"
homepage = "https://armanriazi.github.io/site/public/programming/rust/rust"
repository = "https://github.com/armanriazi/rust-survey"
keywords = ["api","rest","survey","json", "filter"]
categories = ["development-tools", "accessibility", "json","parsing"]

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"
log = "0.4.0"

[dependencies]
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono="0.4.23"
proptest = "1"


[[test]]
doc = true
name = "integration_test"
path = "test/integration_test.rs"
test = true